Added highlight.js to syntax highlight the JavaScript code at the output.
Syntax highlighting with GitHub theme.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
     <title>geneJS</title>
-    <link rel='stylesheet' href="css/index.css"/>
     <link rel='stylesheet' href="css/reset.css"/>
+    <link rel='stylesheet' href="css/index.css"/>
+    <link rel="stylesheet" href="http://yandex.st/highlightjs/6.1/styles/github.min.css"/>
+    <script src="http://yandex.st/highlightjs/6.1/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
     <script type="text/javascript" src="js/library/mustache.js"></script>
     <script type="text/javascript" src="js/library/tartJS/third_party/goog/goog/base.js"></script>
     <script type="text/javascript" src="js/deps.js"></script>
@@ -25,7 +28,7 @@
     end namespace
 
 </textarea>
-<textarea id='generated'></textarea>
+<pre><code class='javascript' id='generated'></code></pre>
 <br/>
 <button id="generate" value="Generate">Generate</button>
 <script type="text" id="nsDeclarations">{{=__ __=}}
