Added a new class "Car" that extends from Vehicle. Gonna support this soon.

--- a/index.html
+++ b/index.html
@@ -17,14 +17,21 @@
     namespace foo
 
         class Vehicle {
-            -name : String
-            -id : String
+            -name : string
+            -id : string
         }
 
     class Vehicle2 {
-                -name : String
-                -id : String
+                -name : string
+                -id : string
             }
+
+    Car <|-- Vehicle
+
+    class Car {
+        - make : number
+        - model : string
+    }
     end namespace
 
 </textarea>
