Updated properties template so that they feature type JSDoc's.

--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@ __/extends__
 
 <script type='text' id="properties">__#properties__
 __#cmp__
+    /** @type {__type__} */
     this.__propName__ = new __type__(data['__name__']);
 __/cmp__
 __^cmp__
+    /** @type {__type__} */
     this.__propName__ = data['__propName__'];
 __/cmp__
 __/properties__
